fix: about us page on mobile

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -54,6 +54,7 @@ a {
     box-shadow: 0 5px 15px rgba(0, 0, 0, .35);
     color: white;
     display: flex;
+    height: 100vh;
     justify-content: center
 }
 
@@ -71,4 +72,10 @@ a {
 #cover #cover-text p {
     font-size: 25px;
     text-align: center
+}
+
+@media (max-width: 1100px) {
+    #cover {
+        height: calc(100vh - 250px);
+    }
 }
