--- a/assets/css/pages/about-us.css
+++ b/assets/css/pages/about-us.css
@@ -1,5 +1,3 @@
 #cover {
     background-image: url(../../img/pages/about-us.png);
-
-    height: 100vh;
 }
